[workspace]
members = [".", "examples/*"]

[package]
name = "leptos_sse"
version = "0.4.0"
edition = "2021"
description = "Leptos server signals synced through server-sent-events (SSE)"
repository = "https://github.com/messense/leptos_sse"
license = "MIT"
keywords = ["leptos", "server", "signal", "sse"]
categories = [
  "wasm",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server",
]

[dependencies]
cfg-if = "1"
js-sys = "0.3"
json-patch = "4"
leptos = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2.100", default-features = false }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent"] }
pin-project-lite = "0.2"
tokio = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Actix
actix-web-lab = { version = "0.20.0", optional = true }

# Axum
axum = { version = "0.7", default-features = false, features = [
  "tokio",
  "json",
], optional = true }
futures = { version = "0.3", default-features = false, optional = true }

[features]
default = []
ssr = []
actix = ["dep:actix-web-lab", "dep:futures", "dep:tokio", "dep:tokio-stream"]
axum = ["dep:axum", "dep:futures", "dep:tokio", "dep:tokio-stream"]

[package.metadata.docs.rs]
features = ["axum", "ssr"]
rustdoc-args = ["--cfg", "docsrs"]
